--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -22,27 +22,19 @@
     "list": [
       {
         "pagePath": "pages/index/index",
-        "text": "首页",
-        "iconPath": "images/tab/home.png",
-        "selectedIconPath": "images/tab/home-active.png"
+        "text": "首页"
       },
       {
         "pagePath": "pages/history/history",
-        "text": "历史",
-        "iconPath": "images/tab/history.png",
-        "selectedIconPath": "images/tab/history-active.png"
+        "text": "历史"
       },
       {
         "pagePath": "pages/statistics/statistics",
-        "text": "统计",
-        "iconPath": "images/tab/chart.png",
-        "selectedIconPath": "images/tab/chart-active.png"
+        "text": "统计"
       },
       {
         "pagePath": "pages/profile/profile",
-        "text": "我的",
-        "iconPath": "images/tab/profile.png",
-        "selectedIconPath": "images/tab/profile-active.png"
+        "text": "我的"
       }
     ]
   },
